--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ section, .vantagen, .contato, .sobre {
   flex-direction: column;
   gap: 14px;
   justify-content: space-between;
-  align-items: center;
+  align-items: self-start;
   padding: 1rem 2rem;
   border: solid 2px var(--cprimary);
   border-radius: 5px;
