--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 /*#8D6F20 font-family:"Meow Script", cursive,*/
 
 * {
-  /*outline: solid 2px red;*/
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -59,7 +58,7 @@ section, .vantagen, .contato, .sobre {
   padding: 1rem 2rem;
   border: solid 2px var(--cprimary);
   border-radius: 5px;
-  width: 100%;
+  width: 100vh;
 }
 
 .dourado {
@@ -92,10 +91,10 @@ section, .vantagen, .contato, .sobre {
   flex-direction: column;
   gap: 14px;
   justify-content: space-between;
-  align-items: self-start;
+  align-items: center;
   padding: 1rem 2rem;
   border-radius: 5px;
-  width: 100%;
+  width: 50%;
   border: solid 2px var(--cprimary);
   margin-bottom: 20px;
 }
@@ -127,7 +126,7 @@ nav ul {
 }
 
 nav a {
-  color: var(--primary);
+  color: var(--cbr);
   text-decoration: none;
   font-weight: 700;
   position: relative;
@@ -141,12 +140,12 @@ nav a::after {
   bottom: -5px;
   width: 0;
   height: 2px;
-  background-color: var(--primary);
+  background-color: var(--cprimary);
   transition: width 0.3s ease;
 }
 
 nav a:hover {
-  color: var(sccbr);
+  color: var(--cprimary);
   transform: scale(1.05);
 }
 
@@ -302,14 +301,13 @@ nav a:hover::after {
 }
 
 .stylist {
- 
   text-align: center;
 }
 
 .stylist img {
   width: 100%;
+  padding-top: 50.25%;
   max-width: 350px;
-
   border-radius: 10%;
 }
 
@@ -447,7 +445,7 @@ footer {
 }
  
 
-@media (max-width: 400px) {
+@media (max-width: 1000px) {
   .container {
     flex-direction: row;
     gap: 30px;
@@ -491,25 +489,23 @@ footer {
     font-size: 1.0rem;
     padding: 0 1rem;
   }
-  
+
    .container .icon {
     right: 35%;
   }
-  
-
 } 
 
-@media (max-width: 1000px) {
+@media (max-width: 400px) {
   .container {
     flex-direction: column;
-    align-items: start;
     gap: 0px;
   }
   .container h1 {
-    font-size: 20px;
+    font-size: 12px;
+     
    }
    .container img {
-    width: 100px;
+     width: 50px;
   }
   .container nav ul {
     font-size: 10px;
@@ -540,85 +536,9 @@ footer {
   }
   
   .container .icon {
-    right: 65%;
+    right: 75%;
     top: 72%;
   }
-  
-  
-#ah {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 12%;
-  left: 5%;
-  & img {
-    width: 20%;
-  }
-}
-
-#an {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 3%;
-  left: 30%;
-  & img {
-    width: 20%;
-  }
-}
-
-#aq {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  position: absolute;
-  top: 12%;
-  left: 60%;
-  & img {
-    width: 30%;
-  }
-}
-
-#ac {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  position: absolute;
-  top: 3%;
-  left: 85%;
-  & img {
-    width: 70%;
-  }
-}
-
-nav a {
-  color: var(--cbr);
-  text-decoration: none;
-  font-weight: 700;
-  position: relative;
-  transition: color 0.3s ease;
-}
-
-nav a::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -5px;
-  width: 0;
-  height: 2px;
-  background-color: var(--cbr);
-  transition: width 0.3s ease;
-}
-
-nav a:hover {
-  color: var(sccbr);
-  transform: scale(1.2);
-}
-
-nav a:hover::after {
-  width: 30%;
-}
   
 }
 
@@ -850,7 +770,7 @@ bottom: 0;
   .stylists .btn {
     margin-top: 1rem;
     background: var(--cprimary);
-    color: #2d2c2c;
+    color: #000;
     padding: 0.75rem 1.5rem;
     border-radius: 5px;
     text-decoration: none;
@@ -1111,7 +1031,7 @@ bottom: 0;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(240, 165, 0, 0.2);
   & img{
-    max-width: 250px;
+    max-width: 200px;
     width: 100%;
   }
   & h3 {
@@ -1130,15 +1050,5 @@ container {
 .icon {
   position: absolute;
   top: 30%; 
-  right: 9%;
-
+  right: 29%;
 }
-
-@media (max-width: 400px) { .icon { 
-  display: none;
-  top: 30%; 
-  right: 50%;
-  }
-}
-
-
