--- a/style.css
+++ b/style.css
@@ -313,6 +313,14 @@ nav a:hover::after {
   background-size: cover;
 }
 
+.projeto1 {
+  transition: 0.6s;
+}
+
+.projeto1:hover {
+  scale: 1.3;
+}
+
 #eng {
   background-image: url('inversor4.jpeg');
   background-size: cover;
