--- a/style.css
+++ b/style.css
@@ -1077,7 +1077,7 @@ bottom: 0;
   }
 }
 @media (max-width: 1000px) { .card { 
-  width: 400px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1101,7 +1101,7 @@ bottom: 0;
 }
 
 @media (max-width: 400px) { .card { 
-  width: 250px;
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -1135,3 +1135,9 @@ container {
   right: 29%;
 }
 
+@media (max-width: 400px) {
+  .icon {
+    top: 30%;
+    right: 50%;
+  }
+}
